site/styles/main.scss
@import '_variables';

@import '_bootstrap4';
@import '_shift72';
@import 'node_modules/font-awesome/scss/font-awesome';

@import '_mixins';
@import '_icons';
@import '_buttons';
@import '_pages';
@import '_forms';

@import '_nav';

@import '_swiper';

@import '_meta-item';
@import '_meta-item-tagline';
@import '_availability-tags';

@import '_collections';
@import '_slider';
@import '_carousel';
@import '_poster';

@import '_homepage';
@import '_meta-detail';
@import '_footer';

@import '_shopping';
@import '_library';
@import '_wishlist';
@import '_search';
@import '_devices';
@import '_gradients';

@import '_social-media-buttons';
@import '_cookie-consent';

// Custom fonts ???
// ---------------------------------------

// @import url(https://cdn.rawgit.com/h-ibaldo/Raleway_Fixed_Numerals/master/css/rawline.css);


// Site specific styles
// ---------------------------------------
@import 'https://cdn.rawgit.com/h-ibaldo/Raleway_Fixed_Numerals/master/css/rawline.css';

html {
	overflow-y: scroll;
}
body {
	font-family: "Rawline", $font-family-base;
}
.container-fluid {
	margin: 0 auto;
	padding: 0;
}
.animate-this {
	transition: all .25s ease-out;
}
.sign-up-now {
	s72-user-anon {
		padding: $grid-gutter-width / 2 0;
		@extend .d-flex;
		justify-content: center;
	}
	.supports {
		@extend .d-flex;
		justify-content: center;
		img {
			max-width: 258px;
		}
	}
}
.s72-modal-container {
	.s72-buttons {
		.s72-btn {
			color: #000;
		}
	}
}

.page-collection-list {
  // List Items
  .page-collection-items {
    // List Item Portrait
    .page-collection-list-item-portrait {
      &.page-collection-item-6 {
				max-width: (100% / 3);
				flex-basis: (100% / 3);
        .meta-item-link {
          width: 100%;
        }
        @include media-breakpoint-up(sm) {
          max-width: (100% / 4);
          flex-basis: (100% / 4);
        }
        @include media-breakpoint-up(lg) {
          max-width: (100% / 5);
          flex-basis: (100% / 5);
        }
        @include media-breakpoint-up(xl) {
          max-width: (100% / 6);
        }
        @include media-breakpoint-up(xxxl) {
          max-width: (100% / 8);
        }
      }
      &.page-collection-item-4 {
        max-width: 50%;
        flex-basis: 50%;
        .meta-item-link {
          width: 100%;
        }
        @include media-breakpoint-up(sm) {
          max-width: (100% / 3);
          flex-basis: (100% / 3);
        }
        @include media-breakpoint-up(lg) {
          max-width: (100% / 4);
          flex-basis: (100% / 4);
        }
        @include media-breakpoint-up(xl) {
          max-width: (100% / 5);
        }
        @include media-breakpoint-up(xxxl) {
          max-width: (100% / 6);
        }
      }
    }
    .page-collection-list-item-landscape {
      &.page-collection-item-4 {
        max-width: 50%;
        flex-basis: 50%;
        .meta-item-link {
          width: 100%;
        }
				@include media-breakpoint-up(sm) {
					max-width: (100% / 3);
					flex-basis: (100% / 3);
				}
        @include media-breakpoint-up(lg) {
          max-width: (100% / 3);
          flex-basis: (100% / 3);
        }
        @include media-breakpoint-up(xl) {
          max-width: (100% / 4);
        }
        @include media-breakpoint-up(xxxl) {
          max-width: (100% / 5);
        }
      }
      &.page-collection-item-3 {
        max-width: 50%;
        flex-basis: 50%;
        .meta-item-link {
          width: 100%;
        }
				@include media-breakpoint-up(lg) {
					max-width: (100% / 3);
					flex-basis: (100% / 3);
				}
        @include media-breakpoint-up(xl) {
          max-width: (100% / 3);
          flex-basis: (100% / 3);
        }
        @include media-breakpoint-up(xxxl) {
          max-width: (100% / 4);
        }
      }
    }
  }
}

s72-classification-label {
  display: inline-block;
}
.s72-classification {
    display: inline-block;
    margin-top: 0;
    padding: 0;
    @extend .d-flex;
    .s72-classification-intro,
    .s72-classification-divider {
      display: none;
    }
    .s72-classification-description {
      font-size: 14px;
      color: rgba(255,255,255,0.5);
      font-weight: 600;
      margin-left: 5px;
      display: none;
    }
    .s72-classification-label {
      color: rgba(255,255,255,0.5);
      font-weight: 800;
      font-size: 12px;
      padding: 1px 5px;
      border: 3px solid rgba(255,255,255,0.5);
      border-radius: 0;
      @include media-breakpoint-up(xxxl) {
        font-size: 14px;
      }
    }
}
// Classication and Tagline
.meta-detail-content .meta-detail-tagline-and-classification {
		align-items: center;
		padding-top: 8px;
		padding-bottom: 14px;
		display: flex !important;
}
.meta-detail-content .meta-detail-tagline-and-classification .s72-classification {
		margin-right: 5px;
}

.meta-detail-content .meta-detail-tagline-and-classification .meta-item-tagline {
		font-weight: 600;
		color: rgba(255, 255, 255, 0.5);
		margin-bottom: 0;
		align-self: center;
}

.wishlist-page-landscape .s72-userwishlist-items {
	@extend .d-flex;
	flex-wrap: wrap;
	// Wishlist Partial
	.partial {
		max-width: (100% / 2);
		flex-basis: (100% / 2);
		@include media-breakpoint-up(md) {
			max-width: (100% / 3);
			flex-basis: (100% / 3);
		}
		@include media-breakpoint-up(lg) {
			max-width: (100% / 3);
			flex-basis: (100% / 3);
		}
		@include media-breakpoint-up(xl) {
			max-width: (100% / 4);
			flex-basis: (100% / 4);
		}
		@include media-breakpoint-up(xxxl) {
			max-width: (100% / 4);
			flex-basis: (100% / 4);
		}
	}
}

// Library
.library-page-landscape .s72-userlibrary-items {
	@extend .d-flex;
	flex-wrap: wrap;
	// Library item Partial
	.partial {
		max-width: (100% / 2);
		flex-basis: (100% / 2);
		@include media-breakpoint-up(md) {
			max-width: (100% / 3);
			flex-basis: (100% / 3);
		}
		@include media-breakpoint-up(lg) {
			max-width: (100% / 3);
			flex-basis: (100% / 3);
		}
		@include media-breakpoint-up(xl) {
			max-width: (100% / 4);
			flex-basis: (100% / 4);
		}
		@include media-breakpoint-up(xxxl) {
			max-width: (100% / 4);
			flex-basis: (100% / 4);
		}
	}
}

// Search
.search-page-landscape .s72-searchresults-results {
	@extend .d-flex;
	flex-wrap: wrap;
	// Search Partial
	.partial {
		max-width: (100% / 2);
		flex-basis: (100% / 2);
		@include media-breakpoint-up(md) {
			max-width: (100% / 3);
			flex-basis: (100% / 3);
		}
		@include media-breakpoint-up(lg) {
			max-width: (100% / 3);
			flex-basis: (100% / 3);
		}
		@include media-breakpoint-up(xl) {
			max-width: (100% / 4);
			flex-basis: (100% / 4);
		}
		@include media-breakpoint-up(xxxl) {
			max-width: (100% / 4);
			flex-basis: (100% / 4);
		}
	}
}

// Bundle - largely inherited from collections
.page-bundle-list {
	@extend .page-collection-list;

	& h4 {
			width: 100%;
	}

	.page-bundle-items {
		@extend .page-collection-items;
	}

	.page-bundle-item {
		@extend .page-collection-item;

		// Uncomment this to max out at 4 items across
		// @include media-breakpoint-up(xxxl) {
		// 	max-width: (100% / 4) !important;
		// 	flex-basis: (100% / 4) !important;
		// }
	}

	.page-bundle-list-item-portrait {
		@extend .page-collection-list-item-portrait;
	}

	.page-bundle-list-item-landscape {
		@extend .page-collection-list-item-landscape;
	}

	.page-bundle-item-4 {
		@extend .page-collection-item-4;
	}

	.page-bundle-item-6 {
		@extend .page-collection-item-6;
	}

	.poster {
		width: 100%; // otherwise inherits from meta_item post which has a fixed width
	}
}

